Added xss to routes.js & updated otherPics in seed file to be an array instead of an object for consistency

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "node-watch": "^0.7.3",
     "nodemon": "^2.0.20",
     "socket.io": "^4.5.4",
-    "ws": "^8.11.0"
+    "ws": "^8.11.0",
+    "xss": "^1.0.14"
   }
 }
